[project]
name = "nano-hud-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litellm>=1.76.2",
    "mcp[cli]>=1.13.1",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff==0.11.2", "pre-commit>=3.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"